feat(receipt): add field trader into receipt
